toolchain/internal/core/analysis/testdata/errors/consts/object_spread_non_object.vdl
// @expect: E206

const base = 10
const cfg = {
  ...base
  host "localhost"
}
